--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -98,7 +98,7 @@ else
 @if (Model.Slide is ExerciseSlide)
 {
 	<div class="comments__rules alert alert-warning">
-		Простые правила хороших комментариев
+		Простые правила хороших комментариев:
 		<ul>
 			<li>Используйте подсказки перед тем, как задать вопрос в комментариях.</li>
 			<li>Воздержитесь от вопросов «Почему у меня не работает?». Отлаживайте, экспериментируйте, думайте!</li>
