initial commit; validations now soft; recursion validation now available as attribute

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -496,7 +496,7 @@
 	</div>
 
 	<div class="run-result run-style-error">
-		<div class="run-verdict label-danger">Нарушение стилевых требований</div>
+		<div class="run-verdict label-warning">Нарушение стилевых требований</div>
 		<pre class="no-rounds"><code class="run-details"></code></pre>
 		<div>
 			<small>В некоторых ситуациях стилевые проверки тут могут быть жестче, чем необходимо в реальной жизни.</small>
