--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -19,38 +19,46 @@
 		}
 	</head>
 	<body>
-	<div class='side-bar navbar-collapse collapse navbar-nav container'>
-		@TableOfContents.Toc(toc)
-	</div>
+		<div class='side-bar navbar-collapse collapse navbar-nav container'>
+			@TableOfContents.Toc(toc)
+		</div>
 
-	<div class="slide-container">
-		<div class="container body-content">
-			<div class="row">
+		<div class="slide-container">
+			<div class="container body-content">
+				<div class="row">
 				@SlideHtml.Slide(new BlockRenderContext(course, slide, "/static/",
-					slide.Blocks.Select(
+						slide.Blocks.Select(
 						(b, i) => b is ExerciseBlock
 							? new ExerciseBlockData(course.Id, (ExerciseSlide)slide) { RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit", DebugView = true, IsGuest = false }
 							: b is AbstractQuestionBlock
-								? new QuizBlockData(new QuizModel
-								{
-									AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuiz>()),
+									? new QuizBlockData(new QuizModel
+									{
+										AnswersToQuizes = slide.Blocks.OfType<AbstractQuestionBlock>().ToDictionary(x => x.Id, x => new List<UserQuiz>()),
 									Slide = (QuizSlide)slide
 								}, i, QuizState.Total)
-								: (dynamic)null
-						).ToArray(),
-					false,
-					true
-					),
-					null)
+									: (dynamic)null
+							).ToArray(),
+						false,
+						true
+						),
+						null)
+					<ul>
+						<li>
+							<a href="/@(slide.Index.ToString("000")).html?query=addLesson">Добавить слайд</a>
+						</li>
+						<li>
+							<a href="/@(slide.Index.ToString("000")).html?query=addQuiz">Добавить quiz</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
 
 
-	@foreach (var jsFile in jsFiles)
-	{
-		<script src='@jsFile'></script>
-	}
+		@foreach (var jsFile in jsFiles)
+		{
+			<script src='@jsFile'></script>
+		}
 	</body>
 	</html>
 }
