done braces indentation

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -492,10 +492,10 @@
 	</div>
 
 	<div class="run-result run-style-error">
-		<div class="run-verdict label-warning">Нарушение стилевых требований</div>
+		<div class="run-verdict label-warning">Задача сдана. Осталось исправить стилевые ошибки!</div>
 		<pre class="no-rounds"><code class="run-details"></code></pre>
 		<div>
-			<small>В некоторых ситуациях стилевые проверки тут могут быть жестче, чем необходимо в реальной жизни.</small>
+			<small>Код со стилевыми ошибками трудно или неприятно читать другим программистам, поэтому он может не пройти код-ревью.</small>
 		</div>
 	</div>
 
@@ -510,7 +510,7 @@
 	</div>
 
 	<div class="run-result run-success">
-		<div class="run-verdict label-success clearfix">Успех!</div>
+		<div class="run-verdict label-success clearfix">Задача сдана!</div>
 		<pre class="no-rounds"><code class="run-details"></code></pre>
 	</div>
 }
