Full localization of "Stepik.org" name

--- a/src/uLearn.Web/Views/Stepik/InitialExportOptions.cshtml
+++ b/src/uLearn.Web/Views/Stepik/InitialExportOptions.cshtml
@@ -9,7 +9,7 @@
 	<h2>Разделение на&nbsp;уроки</h2>
 	
 	<p class="help-block">
-		Каждый модуль курса на&nbsp;ulearn превратится в&nbsp;модуль на&nbsp;Stepik. Но вы можете установить разделители между слайдами,
+		Каждый модуль курса на&nbsp;ulearn превратится в&nbsp;модуль на&nbsp;Степике. Но вы можете установить разделители между слайдами,
 		с&nbsp;помощью которых мы разобём слайды на&nbsp;уроки. Если не&nbsp;установить разделители, то все слайды окажутся в&nbsp;единственном уроке модуля.
 	</p>
 	
