--- a/src/uLearn.Web/Views/Stepik/UpdateOptions.cshtml
+++ b/src/uLearn.Web/Views/Stepik/UpdateOptions.cshtml
@@ -3,11 +3,11 @@
 @model uLearn.Web.Controllers.UpdateOptionsModel
 
 @{
-	ViewBag.Title = "Обновление курса на Stepik.org";
+	ViewBag.Title = "Обновление курса на Степике";
 }
 
 <div class="container">
-	<h2>Обновление курса на&nbsp;Stepik.org</h2>
+	<h2>Обновление курса на&nbsp;Степике</h2>
 	<p class="help-block">
 		Выберите слайды для&nbsp;обновления. <br />@Model.Course.Title → @Model.StepikCourse.Title.
 	</p>
@@ -68,7 +68,7 @@
 								}
 								else if (!isExported)
 								{
-									<div class="status">слайда нет на&nbsp;Stepik.org</div>
+									<div class="status">слайда нет на&nbsp;Степике</div>
 								}
 							</td>
 							<td>
