--- a/src/uLearn.Web/Views/Stepik/SelectTarget.cshtml
+++ b/src/uLearn.Web/Views/Stepik/SelectTarget.cshtml
@@ -8,8 +8,8 @@
 <div class="container">
 	@if (Model.StepikCourses.Count == 0)
 	{
-		<h2>Скопировать можно только в&nbsp;существующий курс на Stepik.org</h2>
-		<p>У вас нет курсов на&nbsp;Stepik.org. Создайте курс, а затем вернитесь на эту страницу.</p>
+		<h2>Скопировать можно только в&nbsp;существующий курс на&nbsp;Степике</h2>
+		<p>У вас нет курсов на&nbsp;Степике. Создайте курс, а затем вернитесь на эту страницу.</p>
 		<a class="btn btn-large btn-success" href="javascript:back()">&larr; Назад</a>
 	}
 	else
@@ -19,9 +19,9 @@
 			@Html.Hidden("courseId", Model.UlearnCourse.Id)
 			@Html.Hidden("stepikCourseId", "")
 
-			<h2>Выберите один из&nbsp;ваших курсов на&nbsp;Stepik.org</h2>
+			<h2>Выберите один из&nbsp;ваших курсов на&nbsp;Степике</h2>
 			<p>
-				Если у&nbsp;вас ещё нет нужного курса на&nbsp;Stepik.org, создайте его, а&nbsp;затем обновите эту страницу.
+				Если у&nbsp;вас ещё нет нужного курса на&nbsp;Степике, создайте его, а&nbsp;затем обновите эту страницу.
 			</p>
 			<ul class="stepik__course-export__select-course">
 				@foreach (var stepikCourse in Model.StepikCourses)
