--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -38,114 +38,169 @@
 				<a href="" class="create-group-link  internal-page-link">Создайте</a> группу, пригласите в неё студентов или добавьте их самостоятельно. Смотрите статистку только по своей группе.
 			</div>
 		}
-
+		
+		
 		@foreach (var group in Model.Groups)
 		{
-			var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
 			var canModifyGroup = Model.CanModifyGroup[group.Id];
-			<div class="group @(group.IsArchived ? "archived-group" : "nonarchived-group")" data-group-id="@group.Id">
-				<h3 class="group__title">
-					@if (canModifyGroup)
-					{
-						<a href=""
-							class="edit-group-link  internal-page-link"
-							title="Редактировать свойства"
-							data-group-id="@group.Id"
-							data-name="@group.Name"
-							data-is-public="@group.IsPublic.ToString().ToLower()"
-							data-is-archived="@group.IsArchived.ToString().ToLower()"
-							data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
-							data-manual-checking-for-old-solutions="@group.IsManualCheckingEnabledForOldSolutions.ToString().ToLower()"
-							data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
-							data-owner-id="@group.OwnerId">
-							@group.Name</a>
-					}
-					else
-					{
-						@group.Name
-					}
-
-					@if (!group.IsPublic)
-					{
-						<small>
-							<span class="label label-danger">приватная</span>
-						</small>
-					}
+			var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
+			<div class="group row"
+				data-group-id="@group.Id"
+				data-name="@group.Name"
+				data-is-public="@group.IsPublic.ToString().ToLower()"
+				data-is-archived="@group.IsArchived.ToString().ToLower()"
+				data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
+				data-manual-checking-for-old-solutions="@group.IsManualCheckingEnabledForOldSolutions.ToString().ToLower()"
+				data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
+				data-owner-id="@group.OwnerId">
+				<div class="col-xs-8 col-md-4 col-lg-2">
+					<div class="group__title">@group.Name</div>
+					<div class="group__members-count">@group.Members.Count.PluralizeInRussian(RussianPluralizationOptions.Man)</div>
+				</div>
+				<div class="group__labels col-xs-4 col-md-4 col-lg-2"
+					data-add-label-url="@Url.Action("AddLabelToGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })"
+					data-remove-label-url="@Url.Action("RemoveLabelFromGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })">
+					<div class="form-group">
+						<select class="form-control selectpicker" multiple title="Выберите метки">
+							@{
+								var groupLabelIds = Model.LabelsOnGroups[group.Id];
+								foreach (var label in Model.Labels.Values)
+								{
+									<option data-content='<span class="group__label label" style="background-color: #@label.ColorHex" data-label-id="@label.Id">@label.Name</span>'
+											@(groupLabelIds.Contains(label.Id) ? "selected" : "")>
+										@label.Name
+									</option>
+								}
+								<option data-divider="true"></option>
+								<option data-label-id="new">Новая метка</option>
+							}
+						</select>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-4 col-lg-4">
 					@if (group.OwnerId != User.Identity.GetUserId())
 					{
-						<small>
-							<span class="label label-primary">владелец: @group.Owner.VisibleName</span>
-						</small>
-					}
-					@if (group.IsArchived)
-					{
-						<small>
-							<span class="label label-warning">архивная группа</span>
-						</small>
-					}
-				</h3>
-				@{
-					var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.GetRealScheme());
-				}
-				<div class="@(group.IsInviteLinkEnabled ? "text-muted" : "text-danger")">
-					<span class="@(group.IsInviteLinkEnabled ? "clipboard-link" : "")" data-clipboard-text="@inviteLink" title="Отправьте эту ссылку студентам для присоединения к группе. Студенты увидят название группы">
-						@inviteLink
-					</span>
-
-					@if (group.IsInviteLinkEnabled)
-					{
-						<button class="clipboard-link  btn btn-xs btn-primary" data-clipboard-text="@inviteLink" data-show-copied="true">
-							копировать
-						</button>
-					}
-
-					@if (canModifyGroup)
-					{
-						<form action="@Url.Action("EnableGroupInviteLink", "Admin", new { groupId = group.Id, isEnabled = !group.IsInviteLinkEnabled })" method="POST" class="ib">
-							@Html.AntiForgeryToken()
-							<button class="btn btn-default btn-xs">
-								@(group.IsInviteLinkEnabled ? "отключить ссылку" : "включить ссылку")
-							</button>
-						</form>
-					}
-				</div>
-				<ol class="members">
-					@foreach (var member in group.Members.OrderBy(m => m.User.VisibleName))
-					{
-						<li class="member">
-							@member.User.VisibleName (@member.User.UserName)
-							@if (canModifyGroup)
-							{
-								<span class="glyphicon glyphicon-remove  remove-user-from-group-link  text-danger visible-on-parent-hover  cursor-pointer" data-group-id="@group.Id" data-user-id="@member.User.Id" title="Удалить из группы"></span>
-							}
-						</li>
-					}
-				</ol>
-
-				@if (canModifyGroup && !group.IsArchived)
-				{
-					if (group.Members.Count == 0)
-					{
-						<div>В группе нет студентов. Добавьте:</div>
+						<text>Владелец: @group.Owner.VisibleName</text>
 					}
 					else
 					{
-						<div>Добавить студентов:</div>
+						<div>
+							Доступ есть у&nbsp;Екатерина Воронова и ещё 2&nbsp;пользователей.
+						</div>
 					}
-					<input type="text"
-							class="add-user-to-group-input form-control"
-							data-group-id="@group.Id"
-							data-url="@Url.Action("FindUsers", "Admin", new { courseId = Model.Course.Id, withGroups = false })"
-							placeholder="Начните вводить имя или фамилию">
-				}
-				@if ((group.IsArchived || !canModifyGroup) && group.Members.Count == 0)
-				{
-					<div class="text-muted" title="@(group.IsArchived && canModifyGroup ? "Нельзя добавлять пользователей в архивные группы" : "")">
-						Нет студентов
-					</div>
-				}
+				</div>
 			</div>
 		}
+		
+	@*
+	@foreach (var group in Model.Groups)
+	{
+		var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
+		var canModifyGroup = Model.CanModifyGroup[group.Id];
+		<div class="group @(group.IsArchived ? "archived-group" : "nonarchived-group")" data-group-id="@group.Id">
+			<h3 class="group__title">
+				@if (canModifyGroup)
+				{
+					<a href=""
+						class="edit-group-link  internal-page-link"
+						title="Редактировать свойства"
+						data-group-id="@group.Id"
+						data-name="@group.Name"
+						data-is-public="@group.IsPublic.ToString().ToLower()"
+						data-is-archived="@group.IsArchived.ToString().ToLower()"
+						data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
+						data-manual-checking-for-old-solutions="@group.IsManualCheckingEnabledForOldSolutions.ToString().ToLower()"
+						data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
+						data-owner-id="@group.OwnerId">
+						@group.Name</a>
+				}
+				else
+				{
+					@group.Name
+				}
+
+				@if (!group.IsPublic)
+				{
+					<small>
+						<span class="label label-danger">приватная</span>
+					</small>
+				}
+				@if (group.OwnerId != User.Identity.GetUserId())
+				{
+					<small>
+						<span class="label label-primary">владелец: @group.Owner.VisibleName</span>
+					</small>
+				}
+				@if (group.IsArchived)
+				{
+					<small>
+						<span class="label label-warning">архивная группа</span>
+					</small>
+				}
+			</h3>
+			@{
+				var inviteLink = Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, Request.GetRealScheme());
+			}
+			<div class="@(group.IsInviteLinkEnabled ? "text-muted" : "text-danger")">
+				<span class="@(group.IsInviteLinkEnabled ? "clipboard-link" : "")" data-clipboard-text="@inviteLink" title="Отправьте эту ссылку студентам для присоединения к группе. Студенты увидят название группы">
+					@inviteLink
+				</span>
+
+				@if (group.IsInviteLinkEnabled)
+				{
+					<button class="clipboard-link  btn btn-xs btn-primary" data-clipboard-text="@inviteLink" data-show-copied="true">
+						копировать
+					</button>
+				}
+
+				@if (canModifyGroup)
+				{
+					<form action="@Url.Action("EnableGroupInviteLink", "Admin", new { groupId = group.Id, isEnabled = !group.IsInviteLinkEnabled })" method="POST" class="ib">
+						@Html.AntiForgeryToken()
+						<button class="btn btn-default btn-xs">
+							@(group.IsInviteLinkEnabled ? "отключить ссылку" : "включить ссылку")
+						</button>
+					</form>
+				}
+			</div>
+			<ol class="members">
+				@foreach (var member in group.Members.OrderBy(m => m.User.VisibleName))
+				{
+					<li class="member">
+						@member.User.VisibleName (@member.User.UserName)
+						@if (canModifyGroup)
+						{
+							<span class="glyphicon glyphicon-remove  remove-user-from-group-link  text-danger visible-on-parent-hover  cursor-pointer" data-group-id="@group.Id" data-user-id="@member.User.Id" title="Удалить из группы"></span>
+						}
+					</li>
+				}
+			</ol>
+
+			@if (canModifyGroup && !group.IsArchived)
+			{
+				if (group.Members.Count == 0)
+				{
+					<div>В группе нет студентов. Добавьте:</div>
+				}
+				else
+				{
+					<div>Добавить студентов:</div>
+				}
+				<input type="text"
+						class="add-user-to-group-input form-control"
+						data-group-id="@group.Id"
+						data-url="@Url.Action("FindUsers", "Admin", new { courseId = Model.Course.Id, withGroups = false })"
+						placeholder="Начните вводить имя или фамилию">
+			}
+			@if ((group.IsArchived || !canModifyGroup) && group.Members.Count == 0)
+			{
+				<div class="text-muted" title="@(group.IsArchived && canModifyGroup ? "Нельзя добавлять пользователей в архивные группы" : "")">
+					Нет студентов
+				</div>
+			}
+		</div>
+	}
+	*@
 	</div>
 </div>
 
@@ -153,107 +208,117 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title">Создать группу</h4>
+				<ul class="modal-header__tabs">
+					<li class="active"><a href="#members" role="tab">Участники</a></li>
+					<li><a href="#settings" role="tab">Настройки</a></li>
+					<li><a href="#access" role="tab">Доступ</a></li>
+				</ul>
 			</div>
 			<div class="modal-body">
-				@using (Html.BeginForm("CreateGroup", "Admin", FormMethod.Post, new
-				{
-					data_create_group_url = Url.Action("CreateGroup", "Admin"),
-					data_update_group_url = Url.Action("UpdateGroup", "Admin")
-				}))
-				{
-					@Html.AntiForgeryToken()
-					<input type="hidden" name="courseId" value="@Model.Course.Id"/>
-					<input type="hidden" name="groupId" value=""/>
-
-					<div class="form-group">
-						<input id="name" name="name" type="text" class="form-control" placeholder="Название новой группы">
-						<p class="help-block">
-							Студенты увидят название группы, только если вы сами вышлете им ссылку для&nbsp;вступления
-						</p>
-					</div>
-
-					<h3>Настройки</h3>
-					var instructorsList = Model.Instructors.Select(i => new SelectListItem
+				<div role="tabpanel" class="tab-pane fade in active" id="members">
+					Участники
+				</div>
+				<div role="tabpanel" class="tab-pane fade" id="settings">
+					@using (Html.BeginForm("CreateGroup", "Admin", FormMethod.Post, new
 					{
-						Value = i.UserId,
-						Text = i.UserVisibleName,
-					}).ToList();
-					/* Add myself if I am not an instructor (SysAdmin i.e.) */
-					if (Model.Instructors.All(i => i.UserId != User.Identity.GetUserId()))
+						data_create_group_url = Url.Action("CreateGroup", "Admin"),
+						data_update_group_url = Url.Action("UpdateGroup", "Admin")
+					}))
 					{
-						instructorsList.Insert(0, new SelectListItem { Value = User.Identity.GetUserId(), Text = "Вы" });
-					}
+						@Html.AntiForgeryToken()
+						<input type="hidden" name="courseId" value="@Model.Course.Id"/>
+						<input type="hidden" name="groupId" value=""/>
 
-					<div>
-						Владелец&nbsp;
-						@Html.DropDownList("ownerId", instructorsList, new { @class = "form-control ib input-sm", data_default_value = User.Identity.GetUserId() })
-					</div>
-
-					<div class="checkbox checkbox-default">
-						@Html.CheckBox("isPublic")
-						<label for="isPublic">
-							Видна другим инструкторам
-						</label>
-					</div>
-
-					<div class="checkbox checkbox-default">
-						@Html.CheckBox("manualChecking",
-							true,
-							Model.CourseManualCheckingEnabled ? (object)new { disabled = "disabled" } : new { data_default_value = "true" })
-						<label for="manualChecking">
-							Включить код-ревью и ручную проверку тестов для участников группы <br/>
-							@if (Model.CourseManualCheckingEnabled)
-							{
-								<span>(включено для всего курса)</span>
-							}
-						</label>
-					</div>
-
-					<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")">
-						@Html.CheckBox("manualCheckingForOldSolutions", true)
-						<label for="manualCheckingForOldSolutions">
-							Отправить на код-ревью и ручную проверку тестов старые решения участников
-							<span class="glyphicon glyphicon-question-sign with-long-tooltip"
-								data-toggle="tooltip"
-								data-placement="right"
-								title="Если эта опция выключена, то при добавлении студента в группу его старые решения не будут отправлены в очередь на код-ревью">
-							</span>
-						</label>
-					</div>
-
-					<div class="checkbox checkbox-default">
-						@Html.CheckBox("isArchived")
-						<label for="isArchived">
-							Архивная группа
-							<span class="glyphicon glyphicon-question-sign with-long-tooltip"
-								data-toggle="tooltip"
-								data-placement="right"
-								title="Студенты из архивных группы не показываются по фильтру «Мои группы», а сама группа не отвлекает вас от работы. Вы сможете вернуть группу из архива в любой момент">
-							</span>
-						</label>
-					</div>
-
-					if (Model.ScoringGroupsCanBeSetInSomeUnit.Count > 0)
-					{
-						<h3>Баллы</h3>
-						<div>
-							Преподаватели могут выставлять студентам группы следующие баллы:
-							@foreach (var scoringGroup in Model.ScoringGroupsCanBeSetInSomeUnit)
-							{
-								<div class="checkbox checkbox-default scoring-group-checkbox">
-									@Html.CheckBox("scoring-group__" + scoringGroup.Id)
-									<label for="scoring-group__@scoringGroup.Id">
-										@scoringGroup.Name
-									</label>
-								</div>
-							}
+						<div class="form-group">
+							<input id="name" name="name" type="text" class="form-control" placeholder="Название новой группы">
+							<p class="help-block">
+								Студенты увидят название группы, только если вы сами вышлете им ссылку для&nbsp;вступления
+							</p>
 						</div>
+
+						<h3>Настройки</h3>
+						var instructorsList = Model.Instructors.Select(i => new SelectListItem
+						{
+							Value = i.UserId,
+							Text = i.UserVisibleName,
+						}).ToList();
+						/* Add myself if I am not an instructor (SysAdmin i.e.) */
+						if (Model.Instructors.All(i => i.UserId != User.Identity.GetUserId()))
+						{
+							instructorsList.Insert(0, new SelectListItem { Value = User.Identity.GetUserId(), Text = "Вы" });
+						}
+
+						<div>
+							Владелец&nbsp;
+							@Html.DropDownList("ownerId", instructorsList, new { @class = "form-control ib input-sm", data_default_value = User.Identity.GetUserId() })
+						</div>
+
+						<div class="checkbox checkbox-default">
+							@Html.CheckBox("isPublic")
+							<label for="isPublic">
+								Видна другим инструкторам
+							</label>
+						</div>
+
+						<div class="checkbox checkbox-default">
+							@Html.CheckBox("manualChecking",
+								true,
+								Model.CourseManualCheckingEnabled ? (object)new { disabled = "disabled" } : new { data_default_value = "true" })
+							<label for="manualChecking">
+								Включить код-ревью и ручную проверку тестов для участников группы <br/>
+								@if (Model.CourseManualCheckingEnabled)
+								{
+									<span>(включено для всего курса)</span>
+								}
+							</label>
+						</div>
+
+						<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")">
+							@Html.CheckBox("manualCheckingForOldSolutions", true)
+							<label for="manualCheckingForOldSolutions">
+								Отправить на код-ревью и ручную проверку тестов старые решения участников
+								<span class="glyphicon glyphicon-question-sign with-long-tooltip"
+									data-toggle="tooltip"
+									data-placement="right"
+									title="Если эта опция выключена, то при добавлении студента в группу его старые решения не будут отправлены в очередь на код-ревью">
+								</span>
+							</label>
+						</div>
+
+						<div class="checkbox checkbox-default">
+							@Html.CheckBox("isArchived")
+							<label for="isArchived">
+								Архивная группа
+								<span class="glyphicon glyphicon-question-sign with-long-tooltip"
+									data-toggle="tooltip"
+									data-placement="right"
+									title="Студенты из архивных группы не показываются по фильтру «Мои группы», а сама группа не отвлекает вас от работы. Вы сможете вернуть группу из архива в любой момент">
+								</span>
+							</label>
+						</div>
+
+						if (Model.ScoringGroupsCanBeSetInSomeUnit.Count > 0)
+						{
+							<h3>Баллы</h3>
+							<div>
+								Преподаватели могут выставлять студентам группы следующие баллы:
+								@foreach (var scoringGroup in Model.ScoringGroupsCanBeSetInSomeUnit)
+								{
+									<div class="checkbox checkbox-default scoring-group-checkbox">
+										@Html.CheckBox("scoring-group__" + scoringGroup.Id)
+										<label for="scoring-group__@scoringGroup.Id">
+											@scoringGroup.Name
+										</label>
+									</div>
+								}
+							</div>
+						}
+
+						<button class="action-button  btn btn-success">Создать</button>
+						<button class="remove-group-link  btn btn-danger" data-url="@Url.Action("RemoveGroup", "Admin")">Удалить группу</button>
 					}
 
-					<button class="action-button  btn btn-success">Создать</button>
-					<button class="remove-group-link  btn btn-danger" data-url="@Url.Action("RemoveGroup", "Admin")">Удалить группу</button>
-				}
+				</div>
 			</div>
 		</div>
 	</div>
