New groups creating and editing interface

--- a/src/uLearn.Web/Content/modals.css
+++ b/src/uLearn.Web/Content/modals.css
@@ -1,4 +1,16 @@
-﻿.modal-header__tabs {
+﻿.modal-body > h3:first-child,
+.modal-body h3.first-header {
+	margin-top: 0;
+}
+
+.modal-title {
+	display: inline-block;
+	font-size: 16px;
+	font-weight: 500;
+}
+
+/* Modal header tabs*/
+.modal-header__tabs {
 	margin: 0;
 	margin-top: -15px;
 	margin-bottom: -15px;
@@ -20,10 +32,11 @@
 	padding-bottom: 15px;
 	padding-left: 3px;
 	padding-right: 3px;
-	/border-bottom: 2px solid #337ab7;
 }
 
-.modal-header__tabs li a:hover {
+.modal-header__tabs li a:hover,
+.modal-header__tabs li a:active,
+.modal-header__tabs li a:focus {
 	text-decoration: none;
 	border-bottom-color: #23527c
 }
@@ -33,4 +46,12 @@
 	color: black;
 	border-bottom-width: 0;
 	font-weight: bold;
+}
+
+.modal-body .tab-pane {
+	display: none;
+}
+
+.modal-body .tab-pane.active {
+	display: initial;
 }
