--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -4,8 +4,62 @@
 @using uLearn
 @using uLearn.Extensions
 @using uLearn.Web.Extensions
+@using uLearn.Web.Views.Shared
 
 @model uLearn.Web.Controllers.GroupsViewModel
+
+@helper GroupSettings(string fieldsPrefix, bool setFirstHeader=false)
+{
+	<h3 class="@(setFirstHeader ? "first-header" : "")">Код-ревью и проверка тестов</h3>
+
+	<div class="checkbox checkbox-default">
+		<input checked="checked" data-default-value="true" id="@(fieldsPrefix)manualChecking" name="manualChecking" type="checkbox" value="true" @(Model.CourseManualCheckingEnabled ? "disabled" : "")>
+		<input type="hidden" name="manualChecking" value="false" />
+		<label for="@(fieldsPrefix)manualChecking">
+			Включить код-ревью и ручную проверку тестов для участников группы <br/>
+
+			@if (Model.CourseManualCheckingEnabled)
+			{
+				<span>(включено для всего курса)</span>
+			}
+		</label>
+	</div>
+
+	<div class="checkbox checkbox-default @(Model.CourseManualCheckingEnabled ? "hidden" : "")">
+		<input checked="checked" data-default-value="true" id="@(fieldsPrefix)manualCheckingForOldSolutions" name="manualCheckingForOldSolutions" type="checkbox" value="true">
+		<input type="hidden" name="manualCheckingForOldSolutions" value="false" />
+		<label for="@(fieldsPrefix)manualCheckingForOldSolutions">
+			Отправить на код-ревью и ручную проверку тестов старые решения участников
+			<span class="glyphicon glyphicon-question-sign with-long-tooltip"
+				data-toggle="tooltip"
+				data-placement="right"
+				title="Если эта опция выключена, то при вступлении студента в группу его старые решения не будут отправлены на код-ревью">
+			</span>
+		</label>
+	</div>
+
+	if (Model.ScoringGroupsCanBeSetInSomeUnit.Count > 0)
+	{
+		<h3>Баллы</h3>
+		<div>
+			Преподаватели могут выставлять студентам группы следующие баллы:
+
+			@foreach (var scoringGroup in Model.ScoringGroupsCanBeSetInSomeUnit)
+			{
+				<div class="checkbox checkbox-default scoring-group-checkbox">
+					<input checked="checked" data-default-value="true" id="@(fieldsPrefix)scoring-group__@(scoringGroup.Id)" name="scoring-group__@(scoringGroup.Id)" type="checkbox" value="true">
+					<input type="hidden" name="scoring-group__@(scoringGroup.Id)" value="false" />
+					<label for="@(fieldsPrefix)scoring-group__@(scoringGroup.Id)">
+						@scoringGroup.Name
+					</label>
+					<div class="scoring-group-description help-block">
+						@scoringGroup.Description
+					</div>
+				</div>
+			}
+		</div>
+	}
+}
 
 @{
 	ViewBag.Title = "Группы";
@@ -44,55 +98,52 @@
 		{
 			var canModifyGroup = Model.CanModifyGroup[group.Id];
 			var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
-			<div class="group row"
-				data-group-id="@group.Id"
-				data-name="@group.Name"
-				data-is-public="@group.IsPublic.ToString().ToLower()"
-				data-is-archived="@group.IsArchived.ToString().ToLower()"
-				data-manual-checking="@group.IsManualCheckingEnabled.ToString().ToLower()"
-				data-manual-checking-for-old-solutions="@group.IsManualCheckingEnabledForOldSolutions.ToString().ToLower()"
-				data-scoring-groups="@string.Join(",", enabledScoringGroupsIds)"
-				data-owner-id="@group.OwnerId">
+			<div class="group row" data-group-id="@group.Id">
 				<div class="col-xs-8 col-md-4 col-lg-2">
 					<div class="group__title">@group.Name</div>
 					<div class="group__members-count">@group.Members.Count.PluralizeInRussian(RussianPluralizationOptions.Man)</div>
 				</div>
-				<div class="group__labels col-xs-4 col-md-4 col-lg-2"
-					data-add-label-url="@Url.Action("AddLabelToGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })"
-					data-remove-label-url="@Url.Action("RemoveLabelFromGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })">
-					<div class="form-group">
-						<select class="form-control selectpicker" multiple title="Выберите метки">
-							@{
-								var groupLabelIds = Model.LabelsOnGroups[group.Id];
-								foreach (var label in Model.Labels.Values)
-								{
-									<option data-content='<span class="group__label label" style="background-color: #@label.ColorHex" data-label-id="@label.Id">@label.Name</span>'
-											@(groupLabelIds.Contains(label.Id) ? "selected" : "")>
-										@label.Name
-									</option>
+				@*
+					<div class="group__labels col-xs-4 col-md-4 col-lg-2"
+						data-add-label-url="@Url.Action("AddLabelToGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })"
+						data-remove-label-url="@Url.Action("RemoveLabelFromGroup", "Admin", new { groupId = group.Id, labelId = "%LABEL%" })">
+						<div class="form-group">
+							<select class="form-control selectpicker" multiple title="Выберите метки">
+								@{
+									var groupLabelIds = Model.LabelsOnGroups[group.Id];
+									foreach (var label in Model.Labels.Values)
+									{
+										<option data-content='<span class="group__label label" style="background-color: #@label.ColorHex" data-label-id="@label.Id">@label.Name</span>'
+												@(groupLabelIds.Contains(label.Id) ? "selected" : "")>
+											@label.Name
+										</option>
+									}
+									<option data-divider="true"></option>
+									<option data-label-id="new">Новая метка</option>
 								}
-								<option data-divider="true"></option>
-								<option data-label-id="new">Новая метка</option>
-							}
-						</select>
+							</select>
+						</div>
 					</div>
-				</div>
+				*@
 				<div class="col-xs-12 col-md-4 col-lg-4">
-					@if (group.OwnerId != User.Identity.GetUserId())
-					{
-						<text>Владелец: @group.Owner.VisibleName</text>
+					<div>
+						@UserAvatar.ExtraSmallAvatar(group.Owner) @group.Owner.VisibleName
+					</div>
+
+					@{
+						var accesses = Model.GroupAccesses[@group.Id];
 					}
-					else
+					@if (accesses.Count > 0)
 					{
 						<div>
-							Доступ есть у&nbsp;Екатерина Воронова и ещё 2&nbsp;пользователей.
+							Преподавател@(accesses.Count == 1 ? "ь" : "и"): @string.Join(", ", accesses.Select(a => a.User.VisibleName))
 						</div>
 					}
 				</div>
 			</div>
 		}
 		
-	@*
+		@*
 	@foreach (var group in Model.Groups)
 	{
 		var enabledScoringGroupsIds = Model.EnabledScoringGroups.GetOrDefault(group.Id, new List<string>());
@@ -201,6 +252,169 @@
 		</div>
 	}
 	*@
+	</div>
+</div>
+
+@* TODO (andgein): Add form around fields and move url into form's action *@
+<div class="modal fade" id="modal__create-group__step1" data-create-group-url="@Url.Action("CreateGroupApi", "Admin")">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Создание группы</h4>
+			</div>
+			<div class="modal-body">
+				@Html.AntiForgeryToken()
+				@Html.Hidden("courseId", Model.Course.Id)
+				<div class="form-group">
+					<label for="name">Название группы</label>
+					<input id="name" name="name" type="text" class="form-control" placeholder="КН-201 УрФУ 2017" autofocus>
+					<div class="field-validation-error modal__create-group__step1__name-error"></div>
+					<p class="help-block">
+						Студенты увидят название группы, поэтому постарайтесь сделать его понятным. Пример хорошего названия группы: «КН-201 УрФУ 2017», пример плохого: «Моя группа 2».
+					</p>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-success modal__create-group__step1__button">Далее</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="modal__create-group__step2">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Настройки группы</h4>
+			</div>
+			<div class="modal-body">
+				<form action="@Url.Action("UpdateGroupApi", "Admin")" onsubmit="return false;">
+					@Html.AntiForgeryToken()
+					@Html.Hidden("courseId", Model.Course.Id)
+					@Html.Hidden("groupId")
+					
+					@GroupSettings("modal__create-group__step2__", setFirstHeader: true)
+					
+					<div class="field-validation-error modal__create-group__step2__error"></div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-success modal__create-group__step2__button">Далее</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="modal__create-group__step3" data-group-info-url="@Url.Action("GroupInfo", "Admin", new { groupId = "GROUP_ID" })">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Участники группы</h4>
+			</div>
+			<div class="modal-body">
+				<h3>Преподаватели</h3>
+				<div class="help-block">
+					Преподаватели могут видеть список участников группы, проводить код-ревью и проверку тестов, выставлять баллы и смотреть ведомость.
+				</div>
+					
+				<div class="modal__group__accesses">
+					<div class="group__accesses">
+							
+					</div>
+					<form action="@Url.Action("GrantAccessToGroup", "Admin")" onsubmit="return false;">
+						@Html.AntiForgeryToken()
+						@Html.Hidden("courseId", Model.Course.Id)
+						@Html.Hidden("groupId")
+						<div class="input-group">
+							<input type="text" class="form-control" name="usernameOrEmail" placeholder="Логин или электронная почта преподавателя"/>
+							<span class="input-group-btn">
+								<button role="button" class="btn btn-primary modal__group__add-access-button">Добавить</button>
+							</span>
+						</div>
+						<div class="field-validation-error modal__group__name-error"></div>
+					</form>
+				</div>
+
+				<h3>Студенты</h3>
+				<div class="help-block">
+					Отправьте своим студентам ссылку для&nbsp;вступления в&nbsp;группу: <a href="#" class="modal__create-group__step3__invite-link">...</a>
+				</div>
+
+				<div class="field-validation-error modal__create-group__step3__error"></div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-success modal__create-group__step3__button" data-dismiss="modal">Закрыть</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade "id="modal__edit-group" data-group-info-url="@Url.Action("GroupInfo", "Admin", new { groupId = "GROUP_ID" })">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<div class="modal-title"><span class="modal__edit-group__group-name"></span></div>
+				<div class="pull-right">
+					<ul class="modal-header__tabs">
+						<li class="active"><a href="#" data-target="#modal__edit-group__members">Участники</a></li>
+						<li><a href="#" data-target="#modal__edit-group__settings">Настройки</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="modal-body">
+				<div role="tabpanel" class="tab-pane fade in active" id="modal__edit-group__members">
+					<h3 class="first-header">Преподаватели</h3>
+					<div class="help-block">
+						Преподаватели могут видеть список участников группы, проводить код-ревью и проверку тестов, выставлять баллы и смотреть ведомость.
+					</div>
+					<div class="modal__group__accesses">
+						<div class="group__accesses">
+
+						</div>
+						<form action="@Url.Action("GrantAccessToGroup", "Admin")" onsubmit="return false;">
+							@Html.AntiForgeryToken()
+							@Html.Hidden("courseId", Model.Course.Id)
+							@Html.Hidden("groupId")
+							<div class="input-group">
+								<input type="text" class="form-control" name="usernameOrEmail" placeholder="Логин или электронная почта преподавателя"/>
+								<span class="input-group-btn">
+									<button role="button" class="btn btn-primary modal__group__add-access-button">Добавить</button>
+								</span>
+							</div>
+							<div class="field-validation-error modal__group__name-error"></div>
+						</form>
+					</div>
+
+					<h3>Студенты</h3>
+					<div class="help-block">
+						Отправьте своим студентам ссылку для&nbsp;вступления в&nbsp;группу: <a href="#" class="modal__create-group__step3__invite-link">...</a>
+					</div>
+					<ol class="modal__edit-group__members">
+						
+					</ol>
+				</div>
+				<div role="tabpanel" class="tab-pane fade" id="modal__edit-group__settings">
+					<form action="@Url.Action("UpdateGroupApi", "Admin")" onsubmit="return false;">
+						@Html.AntiForgeryToken()
+						@Html.Hidden("courseId", Model.Course.Id)
+						@Html.Hidden("groupId")
+						
+						@Html.TextBox("name", "", new { @class="form-control", placeholder="Название группы" })
+
+						@GroupSettings("modal__edit-group__")
+
+						<div class="field-validation-error modal__edit-group__error"></div>
+					</form>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-success modal__edit-group__button">Сохранить</button>
+			</div>
+		</div>
 	</div>
 </div>
 
@@ -389,3 +603,4 @@
 		</div>
 	</div>
 </div>
+
